[project]
name = "llm-observability"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Nicolas Brosse", email = "nbrosse@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.21.1",
    "langfuse>=3.0.4",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.20",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]

[tool.ruff]
line-length = 120
